# luna-dial

./: .gitignore  LICENSE  Makefile  README.md  cleanup_auth.sh  docker-compose.yml  go.mod  go.sum  simple_cleanup.sh
doc/: OKR 项目重构指南.md  todo.md  想法.md  有一个AI文档.md
docker/: .env  Caddyfile  backend.Dockerfile  docker-compose.yml  entrypoint.sh  frontend.Dockerfile  start.sh
docs/: ai-design-specification.md  ai-design-supplement.md  ai-execution-plan.md  frontend-functional-specification.md  plan-view-execution-plan.md  python-client-and-data-init-design.md
ent/: client.go  ent.go  generate.go  journalentry.go  journalentry_create.go  journalentry_delete.go  journalentry_query.go  journalentry_update.go  mutation.go  runtime.go  task.go  task_create.go  task_delete.go  task_query.go  task_update.go  tx.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
log/: server.pid
luna_dial_client/: .env  Cargo.toml  README.md  requirements.txt
luna_dial_client/doc/: design.md  implementation-progress.md
luna_dial_client/okr_client/: __init__.py  client.py  models.py  utils.py
luna_dial_client/src/: api.rs  app.rs  logger.rs  main.rs  models.rs  session.rs
luna_dial_client/tests/: test_cli.py
luna_dial_frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
luna_dial_server/: .dockerignore  Dockerfile  docker-compose.yml  go.mod  go.sum  install-compose-v2.sh  nginx.conf  start.sh  todolist.md
migrations/: 001_create_users_table.down.sql  001_create_users_table.up.sql  002_create_tasks_table.down.sql  (+3 more)
(+173 files in other folders)
